# compact_strings

./: Cargo.toml  README.md
benches/: RESULTS.md  benchmarks.rs
benchmarks/: BENCHMARKS.md  Cargo.toml  README.md  tables.toml
benchmarks/benches/: RESULTS.md  benchmarks.rs
fuzz/: Cargo.toml
fuzz/src/: compact_bytestrings.rs  compact_strings.rs  fixed_compact_bytestrings.rs  fixed_compact_strings.rs
src/: compact_bytestrings.rs  compact_strings.rs  fixed_compact_bytestrings.rs  fixed_compact_strings.rs  lib.rs  metadata.rs
