[workspace]
members = ["benchmarks"]

[package]
name = "compact_strings"
version = "2.0.0"
edition = "2021"
description = "A cache-friendly but limited representation of a list of strings or bytestrings."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonr/compact_strings"
repository = "https://github.com/Vonr/compact_strings"
rust-version = "1.56.1"
include = ["src/**/*", "README.md"]
