[workspace]
members = ["benchmarks", "fuzz"]

[package]
name = "compact_strings"
version = "4.1.2"
edition = "2021"
description = "A more compact but limited representation of a list of strings or bytestrings."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Vonr/compact_strings"
repository = "https://github.com/Vonr/compact_strings"
rust-version = "1.60.0"
include = ["src/**/*", "README.md"]

[dependencies.serde]
version = "1.0"
default-features = false
optional = true

[features]
default = []
serde = ["dep:serde"]
no_unsafe = []

[package.metadata.docs.rs]
all-features = false
features = ["serde"]
rustdoc-args = ["--cfg", "docsrs"]
