[package]
name = "benchmarks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.compact_strings]
path = "../"

[dev-dependencies.criterion]
version = "0.5.1"
features = ["html_reports"]

[[bench]]
name = "benchmarks"
harness = false
